load grazing land data and rewrite projs

--- a/scripts/swis_preprocessing.ipynb
+++ b/scripts/swis_preprocessing.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -261,11 +261,11 @@
        "Riverside         10\n",
        "San Bernardino    10\n",
        "Los Angeles        9\n",
-       "San Diego          6\n",
+       "Napa               6\n",
        "Name: County, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -288,12 +288,12 @@
        "NaN               10\n",
        "Tons               3\n",
        "Tons/day           2\n",
-       "Tires/day          1\n",
        "Cu Yards/month     1\n",
+       "Tires/day          1\n",
        "Name: CapacityUnits, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        "102     Cubic Yards    9500.0   Cubic Yards      7.0                NaN  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
        "108     0.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,14 +723,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CLEANING CAPACITY - CONVERT TO CUBIC METERS / MONTH\n",
+      "CLEANING CAPACITY - CONVERT TO CUBIC METERS / YEAR\n",
       "index:  4  - cu yrds --- NEED TO DISENTANGLE STILL!\n",
       "index:  26  - cu yrds --- NEED TO DISENTANGLE STILL!\n",
       "index:  32  - tires/day - delete? now set capacity at:  0.0\n",
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "      <td>Tons/year</td>\n",
        "      <td>90.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>8901.112415</td>\n",
+       "      <td>106813.348981</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -894,7 +894,7 @@
        "      <td>Cu Yards/year</td>\n",
        "      <td>480.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2548.516667</td>\n",
+       "      <td>30582.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -916,7 +916,7 @@
        "      <td>Cu Yards/year</td>\n",
        "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>637.129167</td>\n",
+       "      <td>7645.550000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -938,7 +938,7 @@
        "      <td>Tons/year</td>\n",
        "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2818.659433</td>\n",
+       "      <td>33823.913200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -995,15 +995,15 @@
        "3            Active              Green Materials        50.0        Tons/day   \n",
        "4            Active  Food Wastes,Green Materials      2500.0     Cubic Yards   \n",
        "\n",
-       "   Capacity  CapacityUnits  Acreage  RemainingCapacity       cap_m3  \n",
-       "0   62369.0      Tons/year     90.0                NaN  8901.112415  \n",
-       "1   40000.0  Cu Yards/year    480.0                NaN  2548.516667  \n",
-       "2   10000.0  Cu Yards/year      3.0                NaN   637.129167  \n",
-       "3   19750.0      Tons/year      3.0                NaN  2818.659433  \n",
-       "4    2500.0    Cubic Yards      NaN                NaN     0.000000  "
+       "   Capacity  CapacityUnits  Acreage  RemainingCapacity         cap_m3  \n",
+       "0   62369.0      Tons/year     90.0                NaN  106813.348981  \n",
+       "1   40000.0  Cu Yards/year    480.0                NaN   30582.200000  \n",
+       "2   10000.0  Cu Yards/year      3.0                NaN    7645.550000  \n",
+       "3   19750.0      Tons/year      3.0                NaN   33823.913200  \n",
+       "4    2500.0    Cubic Yards      NaN                NaN       0.000000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,16 +1014,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "332485.98660714296"
+       "3989831.839285714"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
        "109"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,16 +1064,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1120c5cc0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11b017f98>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -1153,7 +1153,7 @@
        "      <td>Tons/year</td>\n",
        "      <td>90.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>8901.112415</td>\n",
+       "      <td>106813.348981</td>\n",
        "      <td>POINT (-121.9904 37.49078)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1176,7 +1176,7 @@
        "      <td>Cu Yards/year</td>\n",
        "      <td>480.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2548.516667</td>\n",
+       "      <td>30582.200000</td>\n",
        "      <td>POINT (-121.00886 36.12481)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1199,7 +1199,7 @@
        "      <td>Cu Yards/year</td>\n",
        "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>637.129167</td>\n",
+       "      <td>7645.550000</td>\n",
        "      <td>POINT (-117.7249 33.60377)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1222,7 +1222,7 @@
        "      <td>Tons/year</td>\n",
        "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2818.659433</td>\n",
+       "      <td>33823.913200</td>\n",
        "      <td>POINT (-118.27222 34.11722)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1281,12 +1281,12 @@
        "3            Active              Green Materials        50.0        Tons/day   \n",
        "4            Active  Food Wastes,Green Materials      2500.0     Cubic Yards   \n",
        "\n",
-       "   Capacity  CapacityUnits  Acreage  RemainingCapacity       cap_m3  \\\n",
-       "0   62369.0      Tons/year     90.0                NaN  8901.112415   \n",
-       "1   40000.0  Cu Yards/year    480.0                NaN  2548.516667   \n",
-       "2   10000.0  Cu Yards/year      3.0                NaN   637.129167   \n",
-       "3   19750.0      Tons/year      3.0                NaN  2818.659433   \n",
-       "4    2500.0    Cubic Yards      NaN                NaN     0.000000   \n",
+       "   Capacity  CapacityUnits  Acreage  RemainingCapacity         cap_m3  \\\n",
+       "0   62369.0      Tons/year     90.0                NaN  106813.348981   \n",
+       "1   40000.0  Cu Yards/year    480.0                NaN   30582.200000   \n",
+       "2   10000.0  Cu Yards/year      3.0                NaN    7645.550000   \n",
+       "3   19750.0      Tons/year      3.0                NaN   33823.913200   \n",
+       "4    2500.0    Cubic Yards      NaN                NaN       0.000000   \n",
        "\n",
        "                      geometry  \n",
        "0   POINT (-121.9904 37.49078)  \n",
@@ -1296,7 +1296,7 @@
        "4      POINT (-122.534 38.584)  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,15 +1307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "exporting shapefile\n",
-      "DONE\n"
+      "exporting shapefile\n"
      ]
     },
     {
@@ -1324,6 +1323,13 @@
      "text": [
       "/Users/anayahall/anaconda/lib/python3.6/site-packages/geopandas/io/file.py:108: FionaDeprecationWarning: Use fiona.Env() instead.\n",
       "  with fiona.drivers():\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DONE\n"
      ]
     }
    ],
@@ -1344,221 +1350,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>SwisNo</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>County</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Place</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Activity</th>\n",
-       "      <th>OperationalStatus</th>\n",
-       "      <th>AcceptedWaste</th>\n",
-       "      <th>Throughput</th>\n",
-       "      <th>ThroughputUnits</th>\n",
-       "      <th>Capacity</th>\n",
-       "      <th>CapacityUnits</th>\n",
-       "      <th>Acreage</th>\n",
-       "      <th>RemainingCapacity</th>\n",
-       "      <th>cap_m3</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>01-AA-0310</td>\n",
-       "      <td>Tri-Cities Rec. and Disp. CD Chip/Grind</td>\n",
-       "      <td>Alameda</td>\n",
-       "      <td>7010 Auto Mall Pkwy.</td>\n",
-       "      <td>Fremont</td>\n",
-       "      <td>37.49078</td>\n",
-       "      <td>-121.99040</td>\n",
-       "      <td>Transfer/Processing</td>\n",
-       "      <td>Small Vol CD Wood Debris ChipGrind Op</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Wood waste</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>Tons/month</td>\n",
-       "      <td>62369.0</td>\n",
-       "      <td>Tons/year</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8901.112415</td>\n",
-       "      <td>POINT (-121.9904 37.49078)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>27-AA-0090</td>\n",
-       "      <td>Breien-Eade Compost Venture</td>\n",
-       "      <td>Monterey</td>\n",
-       "      <td>1 Pine Valley Road</td>\n",
-       "      <td>San Ardo</td>\n",
-       "      <td>36.12481</td>\n",
-       "      <td>-121.00886</td>\n",
-       "      <td>Composting</td>\n",
-       "      <td>Composting Operation (Ag)</td>\n",
-       "      <td>Closed</td>\n",
-       "      <td>Agricultural,Manure</td>\n",
-       "      <td>40000.0</td>\n",
-       "      <td>Cu Yards/year</td>\n",
-       "      <td>40000.0</td>\n",
-       "      <td>Cu Yards/year</td>\n",
-       "      <td>480.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2548.516667</td>\n",
-       "      <td>POINT (-121.00886 36.12481)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>30-AB-0378</td>\n",
-       "      <td>Golden Rain Foundation Composting Op.</td>\n",
-       "      <td>Orange</td>\n",
-       "      <td>24401 Moulton Parkway</td>\n",
-       "      <td>Laguna Hills</td>\n",
-       "      <td>33.60377</td>\n",
-       "      <td>-117.72490</td>\n",
-       "      <td>Composting</td>\n",
-       "      <td>Composting Operation (Green Waste)</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Green Materials</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>Tons/day</td>\n",
-       "      <td>10000.0</td>\n",
-       "      <td>Cu Yards/year</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>637.129167</td>\n",
-       "      <td>POINT (-117.7249 33.60377)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>19-AR-5584</td>\n",
-       "      <td>Dept. of Rec. &amp; Parks Greenwaste Rec.</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>5400 Griffith Park Dr</td>\n",
-       "      <td>Los Angeles (City)</td>\n",
-       "      <td>34.11722</td>\n",
-       "      <td>-118.27222</td>\n",
-       "      <td>Composting</td>\n",
-       "      <td>Chipping and Grinding Activity Fac./ Op.</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Green Materials</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>Tons/day</td>\n",
-       "      <td>19750.0</td>\n",
-       "      <td>Tons/year</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2818.659433</td>\n",
-       "      <td>POINT (-118.27222 34.11722)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>28-AA-0002</td>\n",
-       "      <td>Clover Flat Resource Recovery Park</td>\n",
-       "      <td>Napa</td>\n",
-       "      <td>4380 Silverado Trail Road</td>\n",
-       "      <td>Calistoga</td>\n",
-       "      <td>38.58400</td>\n",
-       "      <td>-122.53400</td>\n",
-       "      <td>Composting</td>\n",
-       "      <td>Composting Facility (Other)</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Food Wastes,Green Materials</td>\n",
-       "      <td>2500.0</td>\n",
-       "      <td>Cubic Yards</td>\n",
-       "      <td>2500.0</td>\n",
-       "      <td>Cubic Yards</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>POINT (-122.534 38.584)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index      SwisNo                                     Name       County  \\\n",
-       "0      0  01-AA-0310  Tri-Cities Rec. and Disp. CD Chip/Grind      Alameda   \n",
-       "1      1  27-AA-0090              Breien-Eade Compost Venture     Monterey   \n",
-       "2      2  30-AB-0378    Golden Rain Foundation Composting Op.       Orange   \n",
-       "3      3  19-AR-5584    Dept. of Rec. & Parks Greenwaste Rec.  Los Angeles   \n",
-       "4      4  28-AA-0002       Clover Flat Resource Recovery Park         Napa   \n",
-       "\n",
-       "                    Location               Place  Latitude  Longitude  \\\n",
-       "0       7010 Auto Mall Pkwy.             Fremont  37.49078 -121.99040   \n",
-       "1         1 Pine Valley Road            San Ardo  36.12481 -121.00886   \n",
-       "2      24401 Moulton Parkway        Laguna Hills  33.60377 -117.72490   \n",
-       "3      5400 Griffith Park Dr  Los Angeles (City)  34.11722 -118.27222   \n",
-       "4  4380 Silverado Trail Road           Calistoga  38.58400 -122.53400   \n",
-       "\n",
-       "              Category                                  Activity  \\\n",
-       "0  Transfer/Processing     Small Vol CD Wood Debris ChipGrind Op   \n",
-       "1           Composting                 Composting Operation (Ag)   \n",
-       "2           Composting        Composting Operation (Green Waste)   \n",
-       "3           Composting  Chipping and Grinding Activity Fac./ Op.   \n",
-       "4           Composting               Composting Facility (Other)   \n",
-       "\n",
-       "  OperationalStatus                AcceptedWaste  Throughput ThroughputUnits  \\\n",
-       "0            Active                   Wood waste       200.0      Tons/month   \n",
-       "1            Closed          Agricultural,Manure     40000.0   Cu Yards/year   \n",
-       "2            Active              Green Materials        20.0        Tons/day   \n",
-       "3            Active              Green Materials        50.0        Tons/day   \n",
-       "4            Active  Food Wastes,Green Materials      2500.0     Cubic Yards   \n",
-       "\n",
-       "   Capacity  CapacityUnits  Acreage  RemainingCapacity       cap_m3  \\\n",
-       "0   62369.0      Tons/year     90.0                NaN  8901.112415   \n",
-       "1   40000.0  Cu Yards/year    480.0                NaN  2548.516667   \n",
-       "2   10000.0  Cu Yards/year      3.0                NaN   637.129167   \n",
-       "3   19750.0      Tons/year      3.0                NaN  2818.659433   \n",
-       "4    2500.0    Cubic Yards      NaN                NaN     0.000000   \n",
-       "\n",
-       "                      geometry  \n",
-       "0   POINT (-121.9904 37.49078)  \n",
-       "1  POINT (-121.00886 36.12481)  \n",
-       "2   POINT (-117.7249 33.60377)  \n",
-       "3  POINT (-118.27222 34.11722)  \n",
-       "4      POINT (-122.534 38.584)  "
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
