--- a/scripts/LPtest.ipynb
+++ b/scripts/LPtest.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 305,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +46,7 @@
     "# define function to convert into proj in meters \n",
     "# (use epsg=26911 for statewide California, can change for others)\n",
     "# alt is 3857\n",
-    "def epsg_meters(gdf, proj=26911):\n",
+    "def epsg_meters(gdf, proj=3310):\n",
     "    g = gdf.copy()\n",
     "    g = g.to_crs(epsg=proj)\n",
     "    return g\n",
@@ -70,8 +72,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# mini gdfs of county wastes (tbm - location and MSW for 2014) \n",
@@ -93,8 +97,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "####MAKE DICTIONARY HERE\n",
@@ -106,8 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Mini gdfs of facilites (location and capacity)\n",
@@ -133,8 +141,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# CREATE DISTANCE MATRIX #################################\n",
@@ -162,8 +172,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# CHECK distances to make sure they're in the right place - this test STILL IN DEGREES!\n",
@@ -177,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +217,7 @@
       "Route_San_Diego_19_AR_5584 = 33823.0\n",
       "Route_San_Diego_30_AB_0378 = 894.0\n",
       "Route_San_Diego_37_AB_0011 = 0.0\n",
-      "Total Cost of Transportation =  69075257282.70038\n"
+      "Total Cost of Transportation =  38395230870.25512\n"
      ]
     }
    ],
@@ -244,7 +256,7 @@
     "vars = LpVariable.dicts(\"Route\",(Counties,Facilities),0,None,LpInteger)\n",
     "\n",
     "# The objective function is added to 'prob' first\n",
-    "prob += lpSum([vars[c][f]*costs[c][f]*emfac for (c,f) in Routes]), \"Sum_of_Transporting_Costs\"\n",
+    "prob += lpSum([vars[c][f]*costs[c][f] for (c,f) in Routes]) + lpSum([vars[c][f]*emfac for (c,f) in Routes]), \"Sum_of_Transporting_Costs\"\n",
     "\n",
     "# # The supply maximum constraints are added to prob for each supply node (warehouse)\n",
     "for c in Counties:\n",
@@ -274,11 +286,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3839.523087025512\n"
+     ]
+    }
+   ],
    "source": [
-    "# print(value(prob.objective)/1000)"
+    "print(value(prob.objective)/10000000)"
    ]
   },
   {
@@ -292,8 +312,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# \"\"\"\n",
