--- a/scripts/land.ipynb
+++ b/scripts/land.ipynb
@@ -36,191 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>STATEFP</th>\n",
-       "      <th>COUNTYFP</th>\n",
-       "      <th>COUNTYNS</th>\n",
-       "      <th>GEOID</th>\n",
-       "      <th>NAME</th>\n",
-       "      <th>NAMELSAD</th>\n",
-       "      <th>LSAD</th>\n",
-       "      <th>CLASSFP</th>\n",
-       "      <th>MTFCC</th>\n",
-       "      <th>CSAFP</th>\n",
-       "      <th>CBSAFP</th>\n",
-       "      <th>METDIVFP</th>\n",
-       "      <th>FUNCSTAT</th>\n",
-       "      <th>ALAND</th>\n",
-       "      <th>AWATER</th>\n",
-       "      <th>INTPTLAT</th>\n",
-       "      <th>INTPTLON</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>06</td>\n",
-       "      <td>091</td>\n",
-       "      <td>00277310</td>\n",
-       "      <td>06091</td>\n",
-       "      <td>Sierra</td>\n",
-       "      <td>Sierra County</td>\n",
-       "      <td>06</td>\n",
-       "      <td>H1</td>\n",
-       "      <td>G4020</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2468694587</td>\n",
-       "      <td>23299110</td>\n",
-       "      <td>+39.5769252</td>\n",
-       "      <td>-120.5219926</td>\n",
-       "      <td>POLYGON ((-13431319.75097945 4821511.426395644...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>06</td>\n",
-       "      <td>067</td>\n",
-       "      <td>00277298</td>\n",
-       "      <td>06067</td>\n",
-       "      <td>Sacramento</td>\n",
-       "      <td>Sacramento County</td>\n",
-       "      <td>06</td>\n",
-       "      <td>H1</td>\n",
-       "      <td>G4020</td>\n",
-       "      <td>472</td>\n",
-       "      <td>40900</td>\n",
-       "      <td>None</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2499183617</td>\n",
-       "      <td>76073827</td>\n",
-       "      <td>+38.4500114</td>\n",
-       "      <td>-121.3404409</td>\n",
-       "      <td>POLYGON ((-13490651.47641084 4680831.603393857...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>06</td>\n",
-       "      <td>083</td>\n",
-       "      <td>00277306</td>\n",
-       "      <td>06083</td>\n",
-       "      <td>Santa Barbara</td>\n",
-       "      <td>Santa Barbara County</td>\n",
-       "      <td>06</td>\n",
-       "      <td>H1</td>\n",
-       "      <td>G4020</td>\n",
-       "      <td>None</td>\n",
-       "      <td>42200</td>\n",
-       "      <td>None</td>\n",
-       "      <td>A</td>\n",
-       "      <td>7084000598</td>\n",
-       "      <td>2729814515</td>\n",
-       "      <td>+34.5370572</td>\n",
-       "      <td>-120.0399729</td>\n",
-       "      <td>(POLYGON ((-13423116.77225655 4042044.14856006...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>06</td>\n",
-       "      <td>009</td>\n",
-       "      <td>01675885</td>\n",
-       "      <td>06009</td>\n",
-       "      <td>Calaveras</td>\n",
-       "      <td>Calaveras County</td>\n",
-       "      <td>06</td>\n",
-       "      <td>H1</td>\n",
-       "      <td>G4020</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2641820834</td>\n",
-       "      <td>43806026</td>\n",
-       "      <td>+38.1838996</td>\n",
-       "      <td>-120.5614415</td>\n",
-       "      <td>POLYGON ((-13428575.483353 4627725.227535474, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>06</td>\n",
-       "      <td>111</td>\n",
-       "      <td>00277320</td>\n",
-       "      <td>06111</td>\n",
-       "      <td>Ventura</td>\n",
-       "      <td>Ventura County</td>\n",
-       "      <td>06</td>\n",
-       "      <td>H1</td>\n",
-       "      <td>G4020</td>\n",
-       "      <td>348</td>\n",
-       "      <td>37100</td>\n",
-       "      <td>None</td>\n",
-       "      <td>A</td>\n",
-       "      <td>4773390489</td>\n",
-       "      <td>945942791</td>\n",
-       "      <td>+34.3587415</td>\n",
-       "      <td>-119.1331432</td>\n",
-       "      <td>(POLYGON ((-13317853.59433417 3931602.41399276...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  STATEFP COUNTYFP  COUNTYNS  GEOID           NAME              NAMELSAD LSAD  \\\n",
-       "0      06      091  00277310  06091         Sierra         Sierra County   06   \n",
-       "1      06      067  00277298  06067     Sacramento     Sacramento County   06   \n",
-       "2      06      083  00277306  06083  Santa Barbara  Santa Barbara County   06   \n",
-       "3      06      009  01675885  06009      Calaveras      Calaveras County   06   \n",
-       "4      06      111  00277320  06111        Ventura        Ventura County   06   \n",
-       "\n",
-       "  CLASSFP  MTFCC CSAFP CBSAFP METDIVFP FUNCSTAT       ALAND      AWATER  \\\n",
-       "0      H1  G4020  None   None     None        A  2468694587    23299110   \n",
-       "1      H1  G4020   472  40900     None        A  2499183617    76073827   \n",
-       "2      H1  G4020  None  42200     None        A  7084000598  2729814515   \n",
-       "3      H1  G4020  None   None     None        A  2641820834    43806026   \n",
-       "4      H1  G4020   348  37100     None        A  4773390489   945942791   \n",
-       "\n",
-       "      INTPTLAT      INTPTLON  \\\n",
-       "0  +39.5769252  -120.5219926   \n",
-       "1  +38.4500114  -121.3404409   \n",
-       "2  +34.5370572  -120.0399729   \n",
-       "3  +38.1838996  -120.5614415   \n",
-       "4  +34.3587415  -119.1331432   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  POLYGON ((-13431319.75097945 4821511.426395644...  \n",
-       "1  POLYGON ((-13490651.47641084 4680831.603393857...  \n",
-       "2  (POLYGON ((-13423116.77225655 4042044.14856006...  \n",
-       "3  POLYGON ((-13428575.483353 4627725.227535474, ...  \n",
-       "4  (POLYGON ((-13317853.59433417 3931602.41399276...  "
+       "{'init': 'epsg:3857'}"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,36 +54,39 @@
     "# now load SHAPEFILE for all CA COUNTIES to merge this\n",
     "county = gpd.read_file(\"data/raw/CA_Counties/CA_Counties_TIGER2016.shp\")\n",
     "\n",
-    "county.head()\n",
-    "\n",
-    "# with fiona.open(\"data/raw/CA_Counties/CA_Counties_TIGER2016.shp\", \"r\") as shapefile:\n",
-    "#     features = [feature[\"geometry\"] for feature in shapefile]\n",
-    "\n",
-    "# gl_w = gpd.read_file(\"data/clean/CA_FMMP_G/CA_FMMP_G.shp\")\n",
-    "\n",
-    "# gl = epsg_meters(gl_w)\n",
-    "# gl.plot()"
+    "county.crs\n",
+    "# county.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "# os.chdir(\"/Volumes/My Passport/CAland\")\n",
-    "gl = gpd.read_file(\"data/raw/CA_FMMP_G/gl_bycounty/grazingland_county.shp\")\n"
+    "gl_wp = gpd.read_file(\"data/raw/CA_FMMP_G/gl_bycounty/grazingland_county.shp\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'init': 'epsg:26911', 'no_defs': True}"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "gl2 = epsg_meters(gl)\n",
-    "county2 = epsg_meters(county)\n",
-    "\n"
+    "gl = epsg_meters(gl_wp)\n",
+    "gl.crs\n"
    ]
   },
   {
@@ -291,7 +119,8 @@
     "# gl2.plot()\n",
     "# county2.plot()\n",
     "\n",
-    "gl2.plot(ax=county2.plot(cmap='Blues', figsize=(10, 6)), color = 'lawngreen')\n"
+    "# gl2.plot(ax=county2.plot(cmap='Blues', figsize=(10, 6)), color = 'lawngreen')\n",
+    "gl"
    ]
   },
   {
