--- a/scripts/swis_preprocessing.ipynb
+++ b/scripts/swis_preprocessing.ipynb
@@ -1334,7 +1334,7 @@
     }
    ],
    "source": [
-    "gdf.crs = {'init' :'epsg:4326'}\n",
+    "gdf.crs = {'init' :'epsg:3310'}\n",
     "\n",
     "\n",
     "# gdf.head()\n",
@@ -1351,7 +1351,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
