--- a/scripts/LPtest.ipynb
+++ b/scripts/LPtest.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "# define function to convert into proj in meters \n",
     "# (use epsg=26911 for statewide California, can change for others)\n",
-    "# alt is 3857\n",
+    "# alt is 3857 or 3310\n",
     "def epsg_meters(gdf, proj=3310):\n",
     "    g = gdf.copy()\n",
     "    g = g.to_crs(epsg=proj)\n",
@@ -72,11 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'init': 'epsg:26911'}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# mini gdfs of county wastes (tbm - location and MSW for 2014) \n",
     "c_proj = gpd.read_file(\"data/clean/techbiomass_pts.shp\")\n",
@@ -112,11 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'init': 'epsg:4326'}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Mini gdfs of facilites (location and capacity)\n",
     "f_proj = gpd.read_file(\"data/clean/clean_swis.shp\")\n",
