--- a/scripts/biomass_preprocessing.ipynb
+++ b/scripts/biomass_preprocessing.ipynb
@@ -562,13 +562,15 @@
     "CA_proj.head()\n",
     "\n",
     "CA = epsg_meters(CA_proj)\n",
-    "CA.head()"
+    "# CA.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# type(CA)"
@@ -1326,7 +1328,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# tbm_pts.plot()"
