--- a/eqns/LPequations.Rmd
+++ b/eqns/LPequations.Rmd
@@ -1,8 +1,11 @@
 ---
-title: "Compost LP Formulation"
-output: pdf_document
-fontsize: 11pt
-geometry: margin=.75in 
+title: "compost distribution"
+author: "Anaya Hall"
+# date: "4/1/2019"
+output: word_document
+# output: pdf_document
+# fontsize: 11pt
+# geometry: margin=.75in
 ---
 
 ```{r setup, include=FALSE}
@@ -12,9 +15,9 @@ knitr::opts_chunk$set(echo = TRUE)
 $i$ : Index of county ($1,...,n$)  
 $j$ : Index of facilities ($1,...,m$)  
 
-$$CO_2e = \sum_{i=1}^{n}TC_i S_i + \sum_{i=1}^{n} (1-\sum_{j=1}^{m}s_{ij})W_i\cdot f +  \sum_{j=1}^{m}(1-\sum_{i=1}^{n}d_{ij})TC_i\cdot g + \sum_{i=1}^{n} \sum_{j=1}^{m} h \cdot D_{ij} s_{ij} W_i$$
+$$CO_2e = \sum_{i=1}^{n}TC_i S_i + \sum_{i=1}^{n} (1-\sum_{j=1}^{m}s_{ij})W_i\cdot f +  \sum_{j=1}^{m}(1-\sum_{i=1}^{n}d_{ij})TC_i\cdot g + \sum_{i=1}^{n} \sum_{j=1}^{m} h \cdot D_{ij} s_{ij} W_i + \sum_{i=1}^{n} \sum_{j=1}^{m} h \cdot L_{ji}d_{ji} TC_i + \sum_{j=1}^m p \cdot s_{ij} W_i$$
 
-$$ Cost = \sum_{i=1}^{n} \sum_{j=1}^{m} d \cdot D_{ij} s_{ij} W_i +  \sum_{i=1}^{n} \sum_{j=1}^{m} e \cdot L_{ji}d_{ji} TC_i$$
+$$ Cost = \sum_{i=1}^{n} \sum_{j=1}^{m} d \cdot D_{ij} s_{ij} W_i +  \sum_{i=1}^{n} \sum_{j=1}^{m} e \cdot L_{ji}d_{ji} TC_i +  \sum_{i=1}^n k \cdot TC_i$$
 
 subject to: 
 
@@ -27,8 +30,8 @@ $0 \leq d_{ij} \leq 1$
 
 where  
 
-$D_{ij}$ : distance to haul to facility $j$ ($f_j$ ) from county $i$ ($c_i$)  
-$L_{ji}$ : distance from $f_j$ to $c_i$ working land  
+$D_{ij}$ : distance to haul to facility $j$ ($f_j$ ) from county $i$ ($c_i$)  (km)  
+$L_{ji}$ : distance from $f_j$ to $c_i$ working land  (km)  
 $W_i$ : Waste available in county $i$  
 $F_j$ : Intake capacity of facility $j$  
 $C_i$ : Amount of output county $i$ can take in (based on amount of land)  
@@ -42,9 +45,12 @@ $S_i$ : sequestration potential per ton (?) compost applied in county $c_i$
 $c$ : conversion factor of waste into compost  (%)  
 $f$ : emission factor for waste left in county ($\frac {CO2_{e}}{ton}$)   
 $g$ : emission factor for compost stranded at facility  ($\frac {CO2_{e}}{ton}$)   
-$e$ : cost to haul away from facility to land  ($\frac {\$}{ton \cdot mi}$)  
-$d$ : cost to haul to facility from county ($\frac {\$}{ton \cdot mi}$)  
-$h$ : transportation emission factor ($\frac {CO2_{e}}{ton \cdot mi}$)  
+$h$ : transportation emission factor ($\frac {CO2_{e}}{ton \cdot km}$) (separate??)  
+$p$ : emission factor for compost production ($\frac {CO2_{e}}{ton}$)   
+$e$ : cost to haul away from facility to land  ($\frac {\$}{ton \cdot km}$)  
+$d$ : cost to haul to facility from county ($\frac {\$}{ton \cdot km}$)  
+$k$ : cost to apply compost to fields ($\frac {\$}{ton}$)  
+
 
 Intake for each facility is sum of the proportion taken in from $c_i$ for $i = 1,...,n$  
 $I_j = \sum_{i=1}^{n} s_{ij} W_i$ 
