--- a/eqns/LPequations.Rmd
+++ b/eqns/LPequations.Rmd
@@ -2,10 +2,10 @@
 title: "compost distribution"
 author: "Anaya Hall"
 # date: "4/1/2019"
-output: word_document
-# output: pdf_document
-# fontsize: 11pt
-# geometry: margin=.75in
+# output: word_document
+output: pdf_document
+fontsize: 18 pt
+geometry: margin=.75in
 ---
 
 ```{r setup, include=FALSE}
@@ -15,9 +15,28 @@ knitr::opts_chunk$set(echo = TRUE)
 $i$ : Index of county ($1,...,n$)  
 $j$ : Index of facilities ($1,...,m$)  
 
-$$CO_2e = \sum_{i=1}^{n}TC_i S_i + \sum_{i=1}^{n} (1-\sum_{j=1}^{m}s_{ij})W_i\cdot f +  \sum_{j=1}^{m}(1-\sum_{i=1}^{n}d_{ij})TC_i\cdot g + \sum_{i=1}^{n} \sum_{j=1}^{m} h \cdot D_{ij} s_{ij} W_i + \sum_{i=1}^{n} \sum_{j=1}^{m} h \cdot L_{ji}d_{ji} TC_i + \sum_{j=1}^m p \cdot s_{ij} W_i$$
+$$gCO_2e = 
+\underbrace{\sum_{i=1}^{n}TC_i S_i}_{CO_2e \text{ sequestered}} + 
+\underbrace{\sum_{i=1}^{n} (1-\sum_{j=1}^{m}s_{ij})W_i\cdot f}_{\text{waste that remains in county}} +  
+\underbrace{\sum_{j=1}^{m}(1-\sum_{i=1}^{n}d_{ij})TC_i\cdot g}_{\text{compost that remains in facililty}} + 
+\underbrace{\sum_{i=1}^{n} \sum_{j=1}^{m} h \cdot D_{ij} s_{ij} W_i}_{\text{transport from county to facility}} + 
+\underbrace{\sum_{i=1}^{n} \sum_{j=1}^{m} h \cdot L_{ji}d_{ji} TC_i}_{\text{transport from facility to land}} + 
+\underbrace{\sum_{j=1}^m p \cdot s_{ij} W_i}_{\text{applying compost}}$$
 
-$$ Cost = \sum_{i=1}^{n} \sum_{j=1}^{m} d \cdot D_{ij} s_{ij} W_i +  \sum_{i=1}^{n} \sum_{j=1}^{m} e \cdot L_{ji}d_{ji} TC_i +  \sum_{i=1}^n k \cdot TC_i$$
+$$ Cost = 
+\underbrace{\sum_{i=1}^{n} \sum_{j=1}^{m} d \cdot D_{ij} s_{ij} W_i}_{\text{transport from county to facility}} +  
+\underbrace{\sum_{i=1}^{n} \sum_{j=1}^{m} e \cdot L_{ji}d_{ji} TC_i}_{\text{transport from facility to land}} +  
+\underbrace{\sum_{i=1}^n k \cdot TC_i}_{\text{cost to apply}}$$
+
+Intake for each facility is sum of the proportion taken in from $c_i$ for $i = 1,...,n$  
+$$I_j = \sum_{i=1}^{n} s_{ij} W_i$$  
+
+Output of each facility is equal to intake converted into compost  
+$$O_j = c \cdot I_j$$  
+
+Total compost applied in each county is the sum of the proporion of output from $f_j$ for $j = 1,...,m$  
+$$TC_i = \sum_{j=1}^{m} d_{ji} O_j$$  
+
 
 subject to: 
 
@@ -30,34 +49,24 @@ $0 \leq d_{ij} \leq 1$
 
 where  
 
+$s_{ij}$ : proportion of $W_i$ to send to $f_j$  
+$d_{ji}$ : proportion of facility $f_j$ output to send to $c_i$ working land  
 $D_{ij}$ : distance to haul to facility $j$ ($f_j$ ) from county $i$ ($c_i$)  (km)  
 $L_{ji}$ : distance from $f_j$ to $c_i$ working land  (km)  
 $W_i$ : Waste available in county $i$  
 $F_j$ : Intake capacity of facility $j$  
 $C_i$ : Amount of output county $i$ can take in (based on amount of land)  
 
-$s_{ij}$ : proportion of $W_i$ to send to $f_j$  
-$d_{ji}$ : proportion of facility $f_j$ output to send to $c_i$ working land  
-
 and 
 
 $S_i$ : sequestration potential per ton (?) compost applied in county $c_i$  
-$c$ : conversion factor of waste into compost  (%)  
-$f$ : emission factor for waste left in county ($\frac {CO2_{e}}{ton}$)   
-$g$ : emission factor for compost stranded at facility  ($\frac {CO2_{e}}{ton}$)   
-$h$ : transportation emission factor ($\frac {CO2_{e}}{ton \cdot km}$) (separate??)  
-$p$ : emission factor for compost production ($\frac {CO2_{e}}{ton}$)   
+$c$ : conversion factor of waste into compost  (%)  (= .58)
+$f$ : emission factor for waste left in county ($\frac {CO2_{e}}{ton}$)   (landfill!! )
+$g$ : emission factor for compost stranded at facility  ($\frac {CO2_{e}}{ton}$)   (0?)
+$h$ : transportation emission factor ($\frac {CO2_{e}}{ton \cdot km}$) (separate??)  (101 g/ton-mi, CARB)
+$p$ : emission factor for compost production ($\frac {CO2_{e}}{ton}$)   (Delonge??)
 $e$ : cost to haul away from facility to land  ($\frac {\$}{ton \cdot km}$)  
 $d$ : cost to haul to facility from county ($\frac {\$}{ton \cdot km}$)  
-$k$ : cost to apply compost to fields ($\frac {\$}{ton}$)  
-
-
-Intake for each facility is sum of the proportion taken in from $c_i$ for $i = 1,...,n$  
-$I_j = \sum_{i=1}^{n} s_{ij} W_i$ 
-
-Output of each facility is equal to intake converted into compost  
-$O_j = c \cdot I_j$  
-
-Total compost applied in each county is the sum of the proporion of output from $f_j$ for $j = 1,...,m$  
-$TC_i = \sum_{j=1}^{m} d_{ij} O_j$  
+$k$ : cost to apply compost to fields ($\frac {\$}{ton}$)  ($8.87/cubic yard, Marin RCD) (\$0.5 / sq ft????, EPA ) ($4/ton)
+https://www.epa.gov/sites/production/files/2015-11/documents/highwy3a.pdf
 
