--- a/eqns/LPequations.Rmd
+++ b/eqns/LPequations.Rmd
@@ -41,7 +41,7 @@ $$TC_i = \sum_{j=1}^{m} d_{ji} O_j$$
 subject to: 
 
 $I_j \leq F_j$  
-$TC_i \leq C_i$  
+$A_i \leq C_i$  
 $\sum_{j=1}^{m} s_{ij} \leq 1$  
 $\sum_{i=1}^{n} d_{ij} \leq 1$  
 $0 \leq s_{ij} \leq 1$  
@@ -49,24 +49,24 @@ $0 \leq d_{ij} \leq 1$
 
 where  
 
-$s_{ij}$ : proportion of $W_i$ to send to $f_j$  
-$d_{ji}$ : proportion of facility $f_j$ output to send to $c_i$ working land  
-$D_{ij}$ : distance to haul to facility $j$ ($f_j$ ) from county $i$ ($c_i$)  (km)  
-$L_{ji}$ : distance from $f_j$ to $c_i$ working land  (km)  
-$W_i$ : Waste available in county $i$  
-$F_j$ : Intake capacity of facility $j$  
-$C_i$ : Amount of output county $i$ can take in (based on amount of land)  
+$s_{ij}$ = Proportion of $W_i$ to send to $f_j$  
+$d_{ji}$ = Proportion of facility $f_j$ output to send to $c_i$ working land  
+$D_{ij}$ = Distance to haul to facility $j$ ($f_j$ ) from county $i$ ($c_i$)  (km)  
+$L_{ji}$ = Distance from $f_j$ to $c_i$ working land  (km)  
+$W_i$ = Waste available in county $i$  
+$F_j$ = Intake capacity of facility $j$  
+$C_i$ = Amount of output county $i$ can take in (based on amount of land)  
 
 and 
 
-$S_i$ : sequestration potential per ton (?) compost applied in county $c_i$  
-$c$ : conversion factor of waste into compost  (%)  (= .58)
-$f$ : emission factor for waste left in county ($\frac {CO2_{e}}{ton}$)   (landfill!! )
-$g$ : emission factor for compost stranded at facility  ($\frac {CO2_{e}}{ton}$)   (0?)
-$h$ : transportation emission factor ($\frac {CO2_{e}}{ton \cdot km}$) (separate??)  (101 g/ton-mi, CARB)
-$p$ : emission factor for compost production ($\frac {CO2_{e}}{ton}$)   (Delonge??)
-$e$ : cost to haul away from facility to land  ($\frac {\$}{ton \cdot km}$)  
-$d$ : cost to haul to facility from county ($\frac {\$}{ton \cdot km}$)  
-$k$ : cost to apply compost to fields ($\frac {\$}{ton}$)  ($8.87/cubic yard, Marin RCD) (\$0.5 / sq ft????, EPA ) ($4/ton)
-https://www.epa.gov/sites/production/files/2015-11/documents/highwy3a.pdf
+$S_i$ = Sequestration potential compost applied in county $c_i$  (gCO2/ton?)  
+$c$ = Conversion factor of waste into compost  (%)  (= .58)  
+$f$ = Emission factor for waste left in county ($\frac {CO2_{e}}{ton}$)   (landfill!! )  
+$g$ = Emission factor for compost stranded at facility  ($\frac {CO2_{e}}{ton}$)   (0?)  
+$h$ = Transportation emission factor ($\frac {CO2_{e}}{ton \cdot km}$) (separate??)  (101 g/ton-mi, CARB)  
+$p$ = Emission factor for compost production ($\frac {CO2_{e}}{ton}$)   (Delonge??)  
+$e$ = Cost to haul away from facility to land  ($\frac {\$}{ton \cdot km}$)    
+$d$ = Cost to haul to facility from county ($\frac {\$}{ton \cdot km}$)   
+$k$ = Cost to apply compost to fields ($\frac {\$}{ton}$)  ($8.87/cubic yard, Marin RCD) (\$0.5 / sq ft????, EPA ) ($4/ton)  
+https://www.epa.gov/sites/production/files/2015-11/documents/highwy3a.pdf  
 
