--- a/eqns/LPequations.Rmd
+++ b/eqns/LPequations.Rmd
@@ -18,12 +18,13 @@ $i$ : Index of county ($1,...,n$)
 $j$ : Index of facilities ($1,...,m$)  
 
 $$gCO_2e = 
-\underbrace{\sum_{i=1}^{n}TC_i S_i}_{CO_2e \text{ sequestered}} + 
-\underbrace{\sum_{i=1}^{n} (1-\sum_{j=1}^{m}s_{ij})W_i\cdot f}_{\text{waste that remains in county}} +  
-\underbrace{\sum_{j=1}^{m}(1-\sum_{i=1}^{n}d_{ij})TC_i\cdot g}_{\text{compost that remains in facililty}} + 
 \underbrace{\sum_{i=1}^{n} \sum_{j=1}^{m} h \cdot D_{ij} s_{ij} W_i}_{\text{transport from county to facility}} + 
+\underbrace{\sum_{i=1}^{n} (1-\sum_{j=1}^{m}s_{ij})W_i\cdot f}_{\text{waste that remains in county}} +  
 \underbrace{\sum_{i=1}^{n} \sum_{j=1}^{m} h \cdot L_{ji}d_{ji} TC_i}_{\text{transport from facility to land}} + 
-\underbrace{\sum_{j=1}^m p \cdot s_{ij} W_i}_{\text{applying compost}}$$
+\underbrace{\sum_{j=1}^{m}(1-\sum_{i=1}^{n}d_{ij})TC_i\cdot g}_{\text{compost that remains in facililty}} + 
+\underbrace{XXX}_{\text{soil emissions???}} + 
+\underbrace{\sum_{j=1}^m p \cdot s_{ij} W_i}_{\text{spreading compost}}
+$$
 
 $$ Cost = 
 \underbrace{\sum_{i=1}^{n} \sum_{j=1}^{m} d \cdot D_{ij} s_{ij} W_i}_{\text{transport from county to facility}} +  
